--- a/filmorator-web/Cargo.toml
+++ b/filmorator-web/Cargo.toml
@@ -20,6 +20,7 @@ sqlx = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 aws-sdk-s3 = { workspace = true }
