refactor: discard most of the current code as legacy WIP PoC

--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -1,13 +1,10 @@
 [workspace]
-members = ["cargo:filmorator-web"]
+members = ["cargo:filmorator-core"]
+# filmorator-cli will be added here when created
+# filmorator-web uses Docker, not cargo-dist
 
-# Config for 'dist'
 [dist]
-# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.30.2"
-# CI backends to support
 ci = "github"
-# The installers to generate for each app
 installers = []
-# Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
