--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,22 +41,24 @@ services:
       echo 'Bucket ready';
       "
 
-  app:
-    build: .
-    depends_on:
-      db:
-        condition: service_healthy
-      minio-setup:
-        condition: service_completed_successfully
-    environment:
-      PORT: "3000"
-      DATABASE_URL: postgres://filmorator:filmorator@db:5432/filmorator
-      FILMORATOR_BUCKET: filmorator
-      AWS_ENDPOINT_URL: http://minio:9000
-      S3_PUBLIC_URL: http://localhost:9000
-      AWS_ACCESS_KEY_ID: minioadmin
-      AWS_SECRET_ACCESS_KEY: minioadmin
-      AWS_REGION: us-east-1
-      RUST_LOG: filmorator_web=debug
-    ports:
-      - "3000:3000"
+  # app:
+  #   Leptos webapp - to be configured after implementation
+  #   See _legacy/Dockerfile for reference patterns
+  #   build: .
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #     minio-setup:
+  #       condition: service_completed_successfully
+  #   environment:
+  #     PORT: "3000"
+  #     DATABASE_URL: postgres://filmorator:filmorator@db:5432/filmorator
+  #     FILMORATOR_BUCKET: filmorator
+  #     AWS_ENDPOINT_URL: http://minio:9000
+  #     S3_PUBLIC_URL: http://localhost:9000
+  #     AWS_ACCESS_KEY_ID: minioadmin
+  #     AWS_SECRET_ACCESS_KEY: minioadmin
+  #     AWS_REGION: us-east-1
+  #     RUST_LOG: filmorator_web=debug
+  #   ports:
+  #     - "3000:3000"
